price fixed on mobile

--- a/app/assets/styles/pages/fixo/main.styl
+++ b/app/assets/styles/pages/fixo/main.styl
@@ -58,11 +58,24 @@ body
 
   th
     height remify(90px)
-    padding 0 1%
+    padding 0 6%
     vertical-align middle
     position relative
     +above('m')
       padding 0 7%
+    &.opt
+      +below('s')
+        position inherit
+      .white-marker
+        +below('s')
+          width remify(120px)
+          box-shadow remify(10px) 0px remify(10px) white
+          height remify(180px)
+          position absolute
+          top 0
+          left 0
+          background-color $white
+          z-index 3
 
   td
     height remify(110px)
@@ -70,21 +83,37 @@ body
     font-weight 600
     position relative
     padding 0 remify(80px)
+    z-index 1
     &.opt
       width remify(210px)
       padding-left remify(25px)
       position relative
+      +below('s')
+        position inherit
+      z-index 2
       input[type=radio]
         position absolute
         top 50%
         left remify(25px)
         margin-top remify(-16px)
+        +below('s')
+          display: none
       oi-price
         position absolute
         top remify(38px)
         left remify(115px)
         height remify(36px)
-        // margin-top remify(-30px)
+        +below('s')
+          position absolute
+          top auto
+          left 0
+          background-color $white
+          box-shadow remify(10px) 0px remify(10px) white
+          width remify(120px)
+          height remify(109px)
+          margin-top remify(-54px)
+          padding remify(35px) 0 0 0
+          z-index 2
 
   .promo
     background-color $orangeLight
@@ -100,6 +129,11 @@ body
     padding remify(13px) 0
     line-height remify(12px)
     transform rotate(-25deg)
+    +below('s')
+      top remify(160px)
+      left remify(100px)
+      z-index 4
+
 
   .bold
     font-family $fontTextBold
@@ -129,8 +163,9 @@ body
   overflow hidden
   padding remify(55px) 0
   height remify(290px)
-  // fix cagada do gaspar (top -130)
   margin-top remify(130px)
+  +below('m')
+    height auto
   &_container
     background-color $grayLighter
 
@@ -253,7 +288,7 @@ body
             display block
             svg
               opacity 1
-              left remify(30px)
+              left remify(25px)
 
 
           & + .rem
@@ -270,8 +305,8 @@ body
             position absolute
             top remify( -3px)
             left remify( 40px)
-            width remify( 30px)
-            height remify( 30px)
+            width remify( 25px)
+            height remify( 25px)
             opacity 0
             transition all .3s linear
             path
